# fastapi-ml-quickstart

./: .gitignore  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
api/: main.py
api/ml/: model.joblib  model.py
tests/: conftest.py  mocks.py
tests/api/: test_api.py
