[tool.poetry]
name = "ml-example"
version = "0.1.0"
description = ""
authors = ["Andy Huynh <andy.huynh312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
sklearn = "^0.0"
pydantic = "^1.5.1"
pandas = "^1.0.4"
python-multipart = "^0.0.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
